--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <!-- Audio (loop) -->
   <audio id="birthdayAudio" loop="" preload="auto">
-    <source src="C:\Users\anupa\Downloads\happy-birthday-357371 (1).mp3" type="audio/mpeg">
+    <source src="happy-birthday.mp3" type="audio/mpeg">
     Your browser does not support the audio element. 
   </audio>
 
